[package]

name = "bap"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Rust bindings to BAP"
repository = "https://github.com/maurer/bap-rust"

[features]
default = []
holmes_support = ["holmes", "postgres"]
json = ["rustc-serialize"]

[dependencies]
bap-sys = {path = "./bap-sys"}
bit-vec = "0.4"
byteorder = "0.4"
lazy_static = "0.2"
enum_primitive = "0.1"
num = "0.1"

postgres = {version = "0.11", optional = true, features = ["bit-vec"]}

[dependencies.holmes]
version = "0.1"
optional = true

[dependencies.rustc-serialize]
version = "0.3"
optional = true
