[package]

name = "bap-sys"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Rust bindings to BAP"
repository = "https://github.com/maurer/bap-rust"
links = "bap"
build = "build.rs"

[build-dependencies]
pkg-config = "*"

[dependencies]
libc = "*"

[lib]
