[package]

name = "bap-sys"
version = "0.1.0"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Rust bindings to BAP"
repository = "https://github.com/maurer/bap-rust"
links = "bap"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.53"

[lib]
